Resolve review comments

--- a/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
+++ b/src/ResourceManager/Resources/Commands.Resources/Properties/Resources.resx
@@ -414,4 +414,7 @@
   <data name="RemovingGroup" xml:space="preserve">
     <value>Removing group ...</value>
   </data>
+  <data name="ApplicationWithDisplayNameDoesntExist" xml:space="preserve">
+    <value>Application with display name '{0}' does not exist.</value>
+  </data>
 </root>
