[Maps] Use Maps SDK over LocationBasedServices SDK

--- a/src/ResourceManager/Maps/Commands.Maps/Properties/Resources.resx
+++ b/src/ResourceManager/Maps/Commands.Maps/Properties/Resources.resx
@@ -121,7 +121,7 @@
     <value>Regenerating Key {0} for account {1}.</value>
   </data>
   <data name="NewAccount_Notice" xml:space="preserve">
-    <value>By creating a Maps Account, you are consenting to the License (see https://azure.microsoft.com/en-us/support/legal/) and Privacy Statement (see https://go.microsoft.com/fwlink/?LinkId=521839&clcid=0x409/).</value>
+    <value>By creating a Maps Account, you are consenting to the License (see https://azure.microsoft.com/en-us/support/legal/) and Privacy Statement (see https://go.microsoft.com/fwlink/?LinkId=521839&amp;clcid=0x409/).</value>
   </data>
   <data name="NewAccount_ProcessMessage" xml:space="preserve">
     <value>Creating new Maps account {0}, Sku {1}.</value>
