--- a/src/ResourceManager/Network/Commands.Network/Properties/Resources.resx
+++ b/src/ResourceManager/Network/Commands.Network/Properties/Resources.resx
@@ -134,6 +134,9 @@
   <data name="VirtualNetworkGatewayIpConfigName" xml:space="preserve">
     <value>virtualNetworkGatewayIpConfiguration</value>
   </data>
+  <data name="VirtualNetworkGatewayVpnClientIpsecPolicy" xml:space="preserve">
+    <value>VirtualNetworkGatewayVpnClientIpsecPolicy</value>
+  </data>  
   <data name="LoadBalancerInBoundNatRuleName" xml:space="preserve">
     <value>inboundNatRules</value>
   </data>
