--- a/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
+++ b/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
@@ -159,6 +159,9 @@
   <data name="InvalidEventTypeSet" xml:space="preserve">
     <value>Cannot use the None option with other event types.</value>
   </data>
+  <data name="RunSetVulnerabilityAssementPolicy" xml:space="preserve">
+    <value>Vulnerability assessment policy is not defined. Please run Set-AzureRmSqlDatabaseVulnerabilityAssessmentPolicy first.</value>
+  </data>
   <data name="InvalidGraphEndpoint" xml:space="preserve">
     <value>Please use Set-AzureRmEnvironment to set a valid GraphEndpoint for the current AzureEnvironment.</value>
   </data>
