--- a/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
+++ b/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
@@ -159,9 +159,6 @@
   <data name="InvalidEventTypeSet" xml:space="preserve">
     <value>Cannot use the None option with other event types.</value>
   </data>
-  <data name="RunSetVulnerabilityAssementPolicy" xml:space="preserve">
-    <value>Vulnerability assessment policy is not defined. Please run Set-AzureRmSqlDatabaseVulnerabilityAssessmentPolicy first.</value>
-  </data>
   <data name="InvalidGraphEndpoint" xml:space="preserve">
     <value>Please use Set-AzureRmEnvironment to set a valid GraphEndpoint for the current AzureEnvironment.</value>
   </data>
@@ -413,5 +410,14 @@
   </data>
   <data name="ServerAdvancedThreatProtectionIsNotDefined" xml:space="preserve">
     <value>Server Advanced Threat Protection is not defined. Please run Set-AzureRmSqlServerAdvancedThreatProtectionPolicy first.</value>
+  </data>
+  <data name="RunSetVulnerabilityAssementPolicy" xml:space="preserve">
+    <value>Vulnerability assessment policy is not defined. Please run Set-AzureRmSqlDatabaseVulnerabilityAssessmentPolicy first.</value>
+  </data>
+  <data name="InvalidBlobStorageSasUri" xml:space="preserve">
+    <value>Invalid BlobStorageSasUri paramater value. The value should be in format of https://mystorage.blob.core.windows.net/vulnerability-assessment?st=XXXXXX"</value>
+  </data>
+  <data name="NoStorageAccountSpecified" xml:space="preserve">
+    <value>Please provide valid value for StorageAccountName or BlobStorageSasUri parameter.</value>
   </data>
 </root>
