--- a/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
+++ b/src/ResourceManager/Sql/Commands.Sql/Properties/Resources.resx
@@ -419,6 +419,7 @@
   </data>
   <data name="ScanIdParameterIsRequired" xml:space="preserve">
     <value>ScanId is a required parameter for this cmdlet. Please explicitly provide it or pass the Get-AzureRmSqlDatabaseVulnerabilityAssessmentScanRecord output via pipe.</value>
+  </data>
   <data name="RetrievingStorageAccountIdUnderSubscriptionFailed" xml:space="preserve">
     <value>Failed retrieving id of storage account '{0}' under subscription '{1}'.</value>
   </data>
