--- a/src/ResourceManager/KeyVault/Commands.KeyVault/Properties/Resources.resx
+++ b/src/ResourceManager/KeyVault/Commands.KeyVault/Properties/Resources.resx
@@ -480,4 +480,7 @@ You can find the object ID using Azure Active Directory Module for Windows Power
   <data name="RemoveDeletedManagedStorageAccountWhatIfMessage" xml:space="preserve">
     <value>Purge managed storage account</value>
   </data>
+  <data name="VaultDoesNotExist" xml:space="preserve">
+    <value>Vault '{0}' does not exist in current subscription. Please create vault '{0}' in current subscirption, or switch to the correct subscription to modifiy the Access Policies of this vault.</value>
+  </data>
 </root>
