--- a/src/ResourceManager/KeyVault/Commands.KeyVault/Properties/Resources.resx
+++ b/src/ResourceManager/KeyVault/Commands.KeyVault/Properties/Resources.resx
@@ -481,6 +481,6 @@ You can find the object ID using Azure Active Directory Module for Windows Power
     <value>Purge managed storage account</value>
   </data>
   <data name="VaultDoesNotExist" xml:space="preserve">
-    <value>Vault '{0}' does not exist in current subscription. Please create vault '{0}' in current subscirption, or switch to the correct subscription to modifiy the Access Policies of this vault.</value>
+    <value>Vault '{0}' does not exist in current subscription.  If this vault exists in your tenant, please switch to the correct subscription in order to modifiy the Access Policies of this vault.</value>
   </data>
 </root>
