--- a/src/ResourceManager/Search/Commands.Management.Search/Properties/Resources.resx
+++ b/src/ResourceManager/Search/Commands.Management.Search/Properties/Resources.resx
@@ -117,22 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="RegenerateAdminKey" xml:space="preserve">
-    <value>Regenerating {0} key for Search Service '{1}' ...</value>
+  <data name="CreateQueryKey" xml:space="preserve">
+    <value>Create query key '{0}'.</value>
   </data>
-  <data name="RegeneratingAdminKey" xml:space="preserve">
+  <data name="CreateQueryKeyWarning" xml:space="preserve">
+    <value>Are you sure you want to create query key '{0}'?</value>
+  </data>
+  <data name="CreateSearchService" xml:space="preserve">
+    <value>Create Search Service '{0}'.</value>
+  </data>
+  <data name="CreateSearchServiceWarning" xml:space="preserve">
+    <value>Are you sure you want to create Search Service '{0}'?</value>
+  </data>
+  <data name="RegenerateAdminKey" xml:space="preserve">
+    <value>Regenerate {0} key for Search Service '{1}'.</value>
+  </data>
+  <data name="RegenerateAdminKeyWarning" xml:space="preserve">
     <value>Are you sure you want to regenerate '{0}' key for Search Service '{1}'?</value>
   </data>
   <data name="RemoveQueryKey" xml:space="preserve">
-    <value>Removing query key '{0}' ....</value>
+    <value>Remove query key '{0}'.</value>
   </data>
-  <data name="RemoveSearchService" xml:space="preserve">
-    <value>Removing Search Service '{0}' ...</value>
-  </data>
-  <data name="RemovingQueryKey" xml:space="preserve">
+  <data name="RemoveQueryKeyWarning" xml:space="preserve">
     <value>Are you sure you want to remove query key '{0}'?</value>
   </data>
-  <data name="RemovingSearchService" xml:space="preserve">
+  <data name="RemoveSearchService" xml:space="preserve">
+    <value>Remove Search Service '{0}'.</value>
+  </data>
+  <data name="RemoveSearchServiceWarning" xml:space="preserve">
     <value>Are you sure you want to remove Search Service '{0}'?</value>
+  </data>
+  <data name="UpdateSearchService" xml:space="preserve">
+    <value>Update Search Service '{0}'.</value>
+  </data>
+  <data name="UpdateSearchServiceWarning" xml:space="preserve">
+    <value>Are you sure you want to update Search Service '{0}'?</value>
   </data>
 </root>
